--- a/main.html
+++ b/main.html
@@ -13,7 +13,9 @@
 <div class="header"><h3>Shaw's News</h3></div>
 <div class="news">	
 <div class="latest-news-section">
+	<header>
 	<h2>Latest News Articles</h2>
+	</header>	
 	<ul>
 		<li>Article 1</li>
 		<li>Article 2</li>
